# iris

./: .gitignore  LICENSE  NOTES  README
cmake/: CMakeLists.txt  FindFFTW.cmake  FindFFTW3.cmake  config.h.in  libiris.pc.in
doc/: bahor.ods  fmm.tex
examples/: .NaCl.data.swp  bahor.cpp  bob-ref.cpp  bob.cpp  bob_gpu.cpp  bob_gpu_same_coords.cpp  gro-charges.cpp  nacl.cpp  poisson.cpp  ses-test.cpp  sort-test.cu  stencils.cpp
lisp/: multipole-v2.lisp  multipole-v3.lisp  multipole.lisp  nacl.lisp  stencil_coeff.lisp  welzl.lisp
src/: api.cpp  api.h  box.h  buffer_manager_gpu.h  cdo3D.cpp  cdo3D.h  charge_assigner.cpp  charge_assigner.h  charge_assigner_gpu.cuh  charge_assigner_gpu.h  charge_assigner_gpu_gpu.cu  comm.cpp  comm.h  comm_driver.cpp  comm_driver.h  comm_rec.cpp  comm_rec.h  comm_rec_gpu.cpp  comm_rec_gpu.h  commrec.cpp  commrec.h  cuda.h  cuda_parameters.h  cuda_timer.cu  cuda_timer.h  debug.cpp  debug.h  domain.cpp  domain.h  domain_gpu.cpp  domain_gpu.h  event.h  event_codes.h  event_queue.cpp  event_queue.h  factorizer.cpp  factorizer.h  fft.cuh  fft3D.cpp  fft3D.h  (+149 more)
tests/: Makefile  dot_test.cu  exchange_halo_test.cpp  exchange_halo_test_cpu.cpp  test_buffer_manager.cu  test_create_Nd.cu
